# BTP

./: .gitignore  CLAUDE.md  CMakeLists.txt  MARP_USAGE.md  README.md  generate_report.py  lbm_multiphase  lbm_sim  main.py  package-lock.json  package.json  plot.py  presentation.tex  pyproject.toml  run_analysis.py  run_quick.sh  run_simulation_and_analysis.sh
data/: entropic_h_y_t2000.csv  entropic_h_y_t3000.csv  entropic_h_y_t5000.csv  entropic_h_y_t8000.csv  entropic_velocity_t0.csv  entropic_velocity_t10000.csv  entropic_velocity_t2000.csv  multiphase_avg_t0.csv  multiphase_avg_t1000.csv  multiphase_avg_t10000.csv  multiphase_avg_t11000.csv  multiphase_avg_t12000.csv  multiphase_avg_t13000.csv  multiphase_avg_t14000.csv  multiphase_avg_t15000.csv  multiphase_avg_t2000.csv  multiphase_avg_t3000.csv  multiphase_avg_t4000.csv  multiphase_avg_t5000.csv  multiphase_avg_t6000.csv  multiphase_avg_t7000.csv  multiphase_avg_t8000.csv  multiphase_avg_t9000.csv  multiphase_t0.csv  multiphase_t1000.csv  multiphase_t10000.csv  multiphase_t11000.csv  multiphase_t12000.csv  multiphase_t13000.csv  multiphase_t14000.csv  multiphase_t15000.csv  multiphase_t2000.csv  multiphase_t3000.csv  multiphase_t4000.csv  multiphase_t5000.csv  multiphase_t6000.csv  multiphase_t7000.csv  multiphase_t8000.csv  multiphase_t9000.csv  standard_h_y_t0.csv  (+6 more)
include/analysis/: h_theorem.hpp
include/lbm/: multiphase.hpp  single_phase.hpp  solver_base.hpp  stability_monitor.hpp
include/utils/: io_utils.hpp  math_utils.hpp  validation.hpp
reports/generators/: __init__.py  data_analyzer.py  markdown_generator.py  marp_interface.py
reports/output/: monthly_report_2025-09.md
reports/templates/: monthly_template.md
reports/templates/styles/: scientific.css
src/: main.cpp  multiphase_lbm.cpp  plot_generators.py
src/analysis/: h_theorem.cpp
src/lbm/: multiphase.cpp  single_phase.cpp  solver_base.cpp  stability_monitor.cpp
src/utils/: io_utils.cpp  math_utils.cpp  validation.cpp
tests/benchmarks/: test_performance_benchmarks.cpp
tests/integration/: test_h_theorem_verification.cpp  test_multiphase_flow.cpp  test_poiseuille_flow.cpp
tests/unit/: test_collision_operators.cpp  test_data_validator.cpp  test_h_theorem.cpp  test_io_utils.cpp  test_math_utils.cpp  test_multiphase.cpp  test_single_phase.cpp  test_solver_base.cpp  test_stability_monitor.cpp
tools/python/: __init__.py  analysis_runner.py  pyproject.toml
tools/python/tests/: __init__.py  test_layout_manager.py
tools/python/visualization/: __init__.py  h_theorem_plots.py  layout_manager.py  multiphase_plots.py  single_phase_plots.py
