[project]
name = "lbm-analysis"
version = "0.1.0"
description = "Python analysis and visualization tools for LBM simulations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "LBM Simulation Project"}
]
license = {text = "MIT"}
keywords = ["lattice-boltzmann", "visualization", "analysis", "h-theorem"]

dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
lbm-analyze = "analysis.run_analysis:main"
lbm-plot = "visualization.generate_plots:main"
lbm-validate = "analysis.validate_results:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]